scroll count levels

--- a/multi-landing-vanila-javascript-example-Borodin-Atamanov.htm
+++ b/multi-landing-vanila-javascript-example-Borodin-Atamanov.htm
@@ -126,6 +126,44 @@ document.addEventListener('DOMContentLoaded', function()
     console.log('');
 }, false);
 
+
+
+document.addEventListener('DOMContentLoaded', function()
+{
+    var scroll_levels =
+    [
+       1000000,
+       300000,
+       100000,
+       30000,
+       10000,
+       3000,
+       1000,
+       300,
+       100,
+       30,
+       0
+    ];
+    var scroll_levels_length = scroll_levels.length;
+    var scrolls_count=0;
+
+    window.addEventListener('scroll', function()
+    {
+        scrolls_count=scrolls_count+1;
+        for (var i = 0; i < scroll_levels.length; i++)
+        {
+            var level_name = scroll_levels_length - i;
+            var level_value = scroll_levels[i]
+            if (scrolls_count >= level_value)
+            {
+                /* Delete current level from scroll_levels array */
+                scroll_levels.pop();
+                console.log('Reach scrolls count: ' + level_value + ' scroll_level: ' + level_name + ' scrolls_count: ' + scrolls_count);
+            }
+        }
+    });
+}, false);
+
 </script>
 
 <style>
